--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<!-- Nav -->
 								<nav class="main-nav">
 									<ul>
-								  	<li><a href="#">HOME</a></li>
+								  	<li><a href="index.html">HOME</a></li>
 								  	<li><a href="https://www.linkedin.com/in/vin%C3%ADcius-eduardo-04572722a/" target="_blank">Linkedin</a></li>
 									<li><a href="https://www.behance.net/viniciuseduardo45" target="_blank">Mais trabalhos</a></li>
 									</ul>
@@ -73,4 +73,5 @@
 
 	</body>
 </html>
+
 
