--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<header>
 								<h1>Olá, me chamo <span style="color: rgb(57, 77, 164);"> Vinícius Faria<br /> </span>
 								Sou estudante de Design.</h1>
-								<p>Estudante de Design na CESAR School, com experiência em UX/UI, gerenciamento de projetos e <a href="https://www.behance.net/viniciuseduardo45" target="_blank">trabalhos gráficos.</a></p>
+								<p>Tenho experiência em UX/UI, gerenciamento de projetos e <a href="https://www.behance.net/viniciuseduardo45" target="_blank">trabalhos gráficos.</a></p>
 							</header>
 							<section id="work">
 								<h2>Meus Projetos Recentes</h2>
@@ -73,5 +73,6 @@
 
 	</body>
 </html>
+
 
 
