--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 							</header>
 							<section id="work">
 								<h2>Meus Projetos Recentes</h2>
+								<a href="pernambuco.html" target="_blank" class="project-card">
+									<div class="project-card">
+										<img src="images/banner.png" alt="Pernambuco"> <br>
+									</a>
 								<a href="murall.html" target="_blank" class="project-card">
 									<div class="project-card">
 										<img src="images/murall.png" alt="Murall"> <br>
